# news_se

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  mcp_server.py  pyproject.toml  requirements.txt  smithery.yaml  test_mcp_client.py
stylebook_mcp_server/: __init__.py  server.py
스타일북/: stylebook_metadata.json
스타일북/1서론/: (1) 뉴스 가치 판단의 기본요소.txt  (2) 뉴스 가치 이렇게 판단하라.txt  1) 뉴스란 무엇인가.txt  1_1뉴스란 무엇인가.json  1_2뉴스 가치 판단의 기본요소.json  1_3뉴스 가치 이렇게 판단하라.json
스타일북/2기사작성 요령/: 1) 기본원칙.txt  2) 리드 쓰기.txt  2_1기본원칙.json  2_2리드 쓰기.json  2_3문장 요건.json  2_4피해야 할 표현들.json  2_5기사 유형별 작성 요령.json  3) 문장 요건.txt  4) 피해야 할 표현들.txt  5) 기사 유형별 작성 요령
스타일북/3기사 작성 준칙/: (1) 인명  (2) 지명  (3) 관청기관·정당·관직명  (4) 시간과 날짜의 표기  (5) 숫자 및 단위  (6) 문장부호 및 약물  (7) 기타  3_1인명.json  3_3관청기관·정당·관직명.json  3_4시간과 날짜의 표기.json  3_5숫자 및 단위.json  3_6문장부호 및 약물.json  3_7기타.json
스타일북/4제목과 레이아웃_레이아웃 요령/: (1) 레이아웃이란  (2) 레이아웃의 원리  (3) 레이아웃시 고려사항  (4) 기사배치  (5) 시각물의 배치  (6) 제목 배치  5_1레이아웃이란.json  5_2레이아웃의 원리.json  5_3레이아웃시 고려사항.json  5_4기사배치.json  5_5시각물의 배치.json  5_6제목 배치.json
스타일북/5제목과 레이아웃_제목달기/: (1) 제목달기  (2) 기사성격별 제목 작성법  (3) 유형별 제목 사용 사례  4_1제목달기.json  4_2기사성격별 제목 작성법.json  4_3유형별 제목 사용 사례.json
스타일북/6부록/: 7_1[부록]기사 작성 요령.json  7_2자주 틀리는 말01.json  7_2자주 틀리는 말02.json  7_2자주 틀리는 말03.json  7_2자주 틀리는 말04.json  [부록]기사 작성 요령  자주 틀리는 말
인수인계_ai대화요약/: 스타일북to_json01.txt  스타일북to_json02.txt
학습문서_mcp/: mcp란?.txt  단계별 상세 실행 방안.txt
