[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stylebook-mcp-server"
version = "0.1.0"
description = "서울경제신문 스타일북 MCP 서버"
readme = "README.md"
authors = [
    {name = "서울경제신문 개발팀", email = "dev@sedaily.com"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/1282saa/news_se"
"Bug Tracker" = "https://github.com/1282saa/news_se/issues"

[project.scripts]
stylebook-mcp = "mcp_server:main"

[tool.setuptools]
packages = ["stylebook_mcp_server"] 